--- a/src/components/countriesSingle.module.css
+++ b/src/components/countriesSingle.module.css
@@ -1,4 +1,5 @@
-.countries-container {
+.background {
   background: linear-gradient(to right, #ff6643, #fbc122);
   background-size: 200% 100%;
+  height: 100vh;
 }
