--- a/src/components/favourites.module.css
+++ b/src/components/favourites.module.css
@@ -1,5 +1,5 @@
 .favourites-container {
-  background: linear-gradient(to right, #ff5733, #27c79a);
+  background: linear-gradient(to right, #ff6643, #fbfb22);
   background-size: 200% 100%;
   height: 100vh;
 }
